fix spacing on second slash on homepage

--- a/style.css
+++ b/style.css
@@ -237,7 +237,7 @@ h3 {
   position: relative;
   font-family: 'Nunito', sans-serif;
   font-size: 20px;
-  padding-top: 30vh;
+  padding-top: 15vh;
   letter-spacing: 3px;
   z-index: 2;
 }
@@ -246,8 +246,7 @@ h3 {
   position: relative;
   font-family: 'Nunito', sans-serif;
   font-size: 20px;
-  padding-top: 5vh;
-  padding-bottom: 30vh;
+  padding-bottom: 10vh;
   padding-left: 2em;
   padding-right: 2em;
   letter-spacing: 3px;
